--- a/css/block.css
+++ b/css/block.css
@@ -1,19 +1,25 @@
 @font-face{
-    font-family: Inter;
-    src: url("./fonts/Inter/Inter-Bold.ttf");
+    font-family: Inter, sans-serif;
+    src: url("../fonts/Inter/Inter-Bold.ttf");
     font-weight: bold;
 }
 
 @font-face{
-    font-family: "Inter";
-    src: url("./fonts/Inter/Inter-Regular.ttf");
+    font-family: Inter, sans-serif;
+    src: url("../fonts/Inter/Inter-Regular.ttf");
     font-weight: 400;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
 }
 
 .container {
     max-width: 594px;
     width: 100%;
     margin: 0 auto;
+    padding: 0px 20px;
 }
 
 h1{
@@ -21,12 +27,14 @@ h1{
     margin-top: 80px;
     margin-bottom: 33px;
     text-align: center;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-size: 58px;
     font-weight: 700;
 }
 
 .block_all{
+    width: 594px;
+    max-width: 100%;
     box-shadow: 0px 8px 35px 0px rgba(0, 0, 0, 0.16);
     border-radius: 16px;
     overflow: hidden; /* Обрезает все углы */
@@ -34,28 +42,33 @@ h1{
 
 .block_top{
     display: flex;
-    justify-content: space-evenly;
-    height: 86px;
+    justify-content: space-between;
+    min-height: 86px;
     background: #FFF;
     border-bottom: 1px solid #DEE2E6;
+    padding: 24px;
+    gap: 20px;
+    /* flex-wrap: wrap; */
 }
 
 .block_end{
     display: flex;
     justify-content: space-between;
-    height: 75px;
+    min-height: 75px;
     background: #F5F5F5;
+    padding: 24px;
+    gap: 20px;
+    /* flex-wrap: wrap; */
 }
 
 .text{
     width: 100%;
     max-width: 356px;
     height: 38px;
-    margin-top: 24px;
     border-radius: 4px;
     padding-left: 14px;
     color: #54595E;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-size: 16px;
     font-weight: 400;
     outline: 1px solid #CED4DA;
@@ -72,14 +85,13 @@ h1{
     width: 100%;
     max-width: 166px;
     height: 39px;
-    margin-top: 27px;
     cursor: pointer;
     color: #FFF;
     background: #272829;
     border-radius: 4px;
     border-color: #272829;
     font-size: 16px;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
 }
 
 .block_1::after{
@@ -96,36 +108,48 @@ h1{
     background: red;
   }
 
-  .btn__delete{
+.block_content {
+    padding: 0px 24px;
+}
+
+.btn__delete{
     border: none;
     width: 100%;
     max-width: 214px;
     height: 39px;
-    margin: 18px 24px;
     background: #6C757D;
     border-radius: 4px;
     border-color: #6C757D;
     color: #FFF;
     font-size: 16px;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     cursor: pointer;
-  }
+}
 
-  .btn__delete_everything{
+.btn__delete_everything{
     border: none;
     width: 100%;
     max-width: 131px;
     height: 39px;
-    margin: 18px 24px;
     background: #DC3545;
     border-radius: 4px;
     border-color: #DC3545;
     color: #FFF;
     font-size: 16px;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     cursor: pointer;
-  }
+}
 
-  .d-none {
+.d-none {
     display: none;
+}
+
+@media screen and (max-width: 425px) {
+    .block_top, .block_end{
+        flex-wrap: wrap;
+    }
+
+    .btn__add, .btn__delete, .btn__delete_everything{
+        max-width: none;
+    }
 }
